--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,3 @@
 theme: jekyll-theme-merlot
 title: Welcome to Mark Ellis's homepage!
+desription: Fell free to bookmark this to keep an eye on my project updates
